--- a/src/style/App.css
+++ b/src/style/App.css
@@ -6,11 +6,12 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
   justify-content: center;
 }
 .title h1 {
   color: #353535;
-  font-size: 50px;
+  font-size: clamp(1.8rem, 2.5vw, 2.8rem);
   font-family: "Cormorant Garamond", serif;
 }
 .title p {
@@ -204,4 +205,10 @@ button {
 }
 .btn-4 span:hover:after {
   width: 100%;
+}
+@media (max-width: 798px) {
+  .container {
+    margin-left: 25px;
+    margin-right: 25px;
+  }
 }
