--- a/src/style/App.css
+++ b/src/style/App.css
@@ -79,14 +79,24 @@ button {
     inset 4px 4px 6px 0 rgba(0, 0, 0, 0.4);
 }
 /* btn-3 */
-
 .btn-3 {
+  background: rgb(0, 172, 238);
   background: linear-gradient(
     0deg,
     rgba(0, 172, 238, 1) 0%,
     rgba(2, 126, 251, 1) 100%
   );
+  width: 130px;
+  height: 40px;
+  line-height: 42px;
+  padding: 0;
   border: none;
+}
+.btn-3 span {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 100%;
 }
 .btn-3:before,
 .btn-3:after {
@@ -141,6 +151,7 @@ button {
 .btn-3 span:hover:after {
   width: 100%;
 }
+
 /* btn-4    */
 .btn-4 {
   background-color: #4dccc6;
