--- a/src/style/App.css
+++ b/src/style/App.css
@@ -733,6 +733,28 @@ button {
   top: 2px;
 }
 
+.loading-spinner {
+  width: 10px;
+  height: 10px;
+  border: 4px solid #f3f3f3; /* Light grey */
+  border-top: 4px solid transparent; /* Black */
+  border-radius: 50%;
+  animation: spinner 1.5s linear infinite;
+}
+.spinner-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 10px;
+}
+@keyframes spinner {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 @media (max-width: 798px) {
   .container {
     margin-left: 25px;
